--- a/pts-session/src/main/webapp/WEB-INF/web.xml
+++ b/pts-session/src/main/webapp/WEB-INF/web.xml
@@ -4,12 +4,39 @@
           xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
           version="3.0" metadata-complete="true">
 
-    <!--http://stackoverflow.com/questions/877064/changing-cookie-jsessionid-name-->
+    <!-- spring security section -->
+    <!-- Spring Security Configuration File -->
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>/WEB-INF/spring/appServlet/spring-security.xml</param-value>
+    </context-param>
+
+    <!-- Creates the Spring Container shared by all Servlet and Filters -->
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
+    <listener>
+        <listener-class>org.springframework.security.web.session.HttpSessionEventPublisher</listener-class>
+    </listener>
+
     <session-config>
+        <session-timeout>15</session-timeout>
+        <!--http://stackoverflow.com/questions/877064/changing-cookie-jsessionid-name-->
         <cookie-config>
             <name>SessionID</name>
         </cookie-config>
     </session-config>
+
+    <!-- Spring Security Filter -->
+    <filter>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
     <!-- Processes application requests -->
     <servlet>
