--- a/pom.xml
+++ b/pom.xml
@@ -236,6 +236,13 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>1.7.10</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
