--- a/pts-session/pom.xml
+++ b/pts-session/pom.xml
@@ -54,5 +54,9 @@
             <artifactId>spring-security-config</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
     </dependencies>
 </project>
