--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,14 @@
     <name>pts-parent</name>
     <version>0.0.1</version>
 
+<!--
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>1.3.0.BUILD-SNAPSHOT</version>
+    </parent>
+
+-->
     <modules>
         <module>pts-session</module>
     </modules>
@@ -17,6 +25,7 @@
 
         <spring.version>4.1.3.RELEASE</spring.version>
         <spring-security.version>4.0.0.RC1</spring-security.version>
+        <spring-boot.version>1.3.0.BUILD-SNAPSHOT</spring-boot.version>
     </properties>
 
     <repositories>
@@ -35,6 +44,17 @@
             <name>Spring Milestone Repository</name>
             <url>http://repo.springsource.org/milestone</url>
         </repository>
+<!--
+        <repository>
+            <id>spring-snapshots</id>
+            <url>http://repo.spring.io/snapshot</url>
+            <snapshots><enabled>true</enabled></snapshots>
+        </repository>
+        <repository>
+            <id>spring-milestones</id>
+            <url>http://repo.spring.io/milestone</url>
+        </repository>
+-->
     </repositories>
 
     <pluginRepositories>
@@ -44,6 +64,16 @@
             <url>http://repo1.maven.org/maven2</url>
             <layout>default</layout>
         </pluginRepository>
+<!--
+        <pluginRepository>
+            <id>spring-snapshots</id>
+            <url>http://repo.spring.io/snapshot</url>
+        </pluginRepository>
+        <pluginRepository>
+            <id>spring-milestones</id>
+            <url>http://repo.spring.io/milestone</url>
+        </pluginRepository>
+-->
     </pluginRepositories>
 
 
@@ -145,7 +175,6 @@
                         </javacArgs>
                     </configuration>
                 </plugin>
-
             </plugins>
         </pluginManagement>
 
@@ -158,6 +187,12 @@
                 <groupId>net.alchim31.maven</groupId>
                 <artifactId>scala-maven-plugin</artifactId>
             </plugin>
+<!--
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -178,6 +213,12 @@
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-compiler</artifactId>
         </dependency>
+<!--
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+-->
     </dependencies>
 
     <dependencyManagement>
